# fwtool

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  crc32.h  fwtool.c
tests/: CMakeLists.txt  test-crc32.c
tests/artifacts/: key-build.ucert  metadata.json
tests/cram/: CMakeLists.txt  test_crc32.t  test_fwtool.t
