CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(fwtool C)
INCLUDE(GNUInstallDirs)

ADD_DEFINITIONS(-Wall -Werror -Wextra -Wno-unused-parameter)
ADD_EXECUTABLE(fwtool fwtool.c)

IF(UNIT_TESTING)
	ENABLE_TESTING()
	ADD_SUBDIRECTORY(tests)
ENDIF()

INSTALL(TARGETS fwtool RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
